--- a/uma-transporter/src/main/resources/application.properties
+++ b/uma-transporter/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.url=jdbc:h2:file:~/h2/UAMTestplus
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
 
 
